crates/analyzer/tests/snapshots/errors__not_in_scope.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: cannot find value `y` in this scope
  ┌─ compile_errors/not_in_scope.fe:8:16
  │
8 │         return y
  │                ^ undefined


